--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-
+   <div>
     <h1>Henlo</h1><h1>Henlo</h1><h1>Henlo</h1><h1>Henlo</h1><h1>Henlo</h1><h1>Henlo</h1><h1>Henlo</h1><h1>Henlo</h1>
     <h1>Henlo</h1><h1>Henlo</h1><h1>Henlo</h1><h1>Henlo</h1><h1>Henlo</h1><h1>Henlo</h1><h1>Henlo</h1><h1>Henlo</h1>
     <h1>Henlo</h1><h1>Henlo</h1><h1>Henlo</h1><h1>Henlo</h1><h1>Henlo</h1><h1>Henlo</h1><h1>Henlo</h1><h1>Henlo</h1>
-    
+   </div>
 </body>
 </html>
